--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "validator": "^13.1.1"
   },
   "scripts": {
+    "start": "pm2 start ecosystem.config.json --no-daemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
